<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activities.ForgotPasswordActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrayLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="40dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/str_enter_your_email_mobile_to_reset"
                android:textColor="@color/colorGray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@drawable/round_white_edittext_background"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/str_email_address"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGray"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/round_theme_background"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/str_submit"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>